# aegisScout

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  build.bat  pyproject.toml  smoke_test.py  smoke_test_commands.py
.github/workflows/: ci.yml
config/: config.example.toml
migrations/: env.py  script.py.mako
scripts/: _check_html.py  apply_improvements.py  build_exe.py  build_exe.spec  take_screenshots.py
src/aegisScout/: __init__.py  gui.py  gui_assets.py  gui_impl.py  main.py
src/aegisScout/ai/: base_provider.py  cache.py  jina_reader.py  local_rag.py  multi_agent.py  provider_router.py  reply_classifier.py  translation_service.py  vision_audit.py
src/aegisScout/assets/: index.html  replacer.py
src/aegisScout/cli/: commands.py
src/aegisScout/core/: campaign_analytics.py  config.py  crawler.py  cron_manager.py  database.py  deduplicator.py  deep_osint.py  lead_scorer.py  models.py  scheduler.py  screen_audit.py  screen_gallery.py  task_queue.py  toml_config.py  updater.py  waterfall.py
src/aegisScout/discovery/: base.py  bing_search_provider.py  bulk_discovery.py  competitor_analyzer.py  doktorsitesi_provider.py  doktortakvimi_provider.py  enrichers.py  google_maps_scraper_provider.py  google_places_provider.py  instagram_finder.py  linkedin_company_provider.py  location_provider.py  models.py  orchestrator.py  osint_framework.py  osm_provider.py  photon_provider.py  sahibinden_sarisayfalar_provider.py  serpapi_provider.py  social_discovery.py  web_scraper.py  web_search_provider.py  yelp_tripadvisor_provider.py
src/aegisScout/enrichment/: contact_validator.py  domain_audit.py  media_resolver.py
tests/: conftest.py  test_advanced_features.py  test_crm_outreach_ollama.py  test_gui_quick.py  test_v2_features.py  test_v3_features.py  test_v4_features.py  test_v4_ui_osint.py  test_zero_key_services.py
tests/test_ai/: test_base_provider_hardening.py  test_gemini_header.py  test_local_rag.py  test_multi_agent.py  test_new_providers.py  test_provider_router_json.py  test_retry.py  test_router.py
tests/test_cli/: test_main_help.py  test_mod_b_gate.py  test_review_statuses.py
tests/test_core/: test_database.py  test_scheduler_v5.py  test_toml_config.py  test_v5_upgrades.py
tests/test_discovery/: test_google_places_provider.py  test_instagram_finder.py  test_orchestrator_v5.py  test_osm.py  test_osm_ua.py  test_scraper.py  test_scraper_turkish_phone.py  test_serpapi_provider.py  test_web_search.py
tests/test_enrichment/: test_zero_config_suite.py
tests/test_gui/: test_gui_no_secrets.py
tests/test_monitoring/: test_crm_sync_v5.py  test_notifier.py  test_notifier_channels.py  test_notifier_smtp_timeout.py  test_reply_watcher_executor.py  test_reply_watcher_shutdown.py
tests/test_outreach/: test_assisted_mode.py  test_cadence_v5.py  test_campaign.py  test_limiter.py  test_limiter_enforcement.py  test_limiter_freeze.py  test_rotation.py
tests/test_utils/: test_encryption.py  test_json_helper.py
(+42 files in other folders)
